<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="app_heading">Playlist maker</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="license_agreement">Пользовательское соглашение</string>
    <string name="share_link">Смотри, какой классный курс по Android-разработке https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">ovseychik.s@yandex.ru</string>
    <string name="support_email_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="legal_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="check_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="check_network_lvl2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="player_start_time" translatable="false">00:00</string>
    <string name="player_attributes_length">Длительность</string>
    <string name="player_attributes_album">Альбом</string>
    <string name="player_attributes_year">Год</string>
    <string name="player_attributes_genre">Жанр</string>
    <string name="player_attributes_country">Страна</string>
    <string name="description_player_add_to_playlist">Добавить в плейлист</string>
    <string name="description_player_play">Воспроизвести</string>
    <string name="description_player_like_button">Отметить как понравившееся</string>
    <string name="description_button_back">Кнопка назад</string>
    <string name="description_album_artwork">Здесь отображается обложка альбома</string>
    <string name="snackbar_error_message">Что-то пошло не так</string>
    <string name="error_server_error">Ошибка сервера</string>
    <string name="no_info">Нет сведений</string>
    <string name="tab_favorite_track">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="placeholder_no_favorite_tracks">Ваша медиатека пуста</string>
    <string name="placeholder_no_playlists_yet">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="permission_rationale">Разрешение на доступ к изображениям необходимо для установки обложки плейлиста</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="complete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="data_loss_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_count">трек</string>

    <plurals name="track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <string name="share_playlist">Поделиться</string>
    <string name="update_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_warning">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_playlist_warning">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="ok">OK</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="error_on_query_processing">Ошибка при удалении</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

</resources>