<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding14"
    android:paddingBottom="@dimen/padding22"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/margin16"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/primary_accent"
        android:textSize="22sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin34"
        android:layout_marginEnd="@dimen/margin15"
        android:text="@string/search"
        app:icon="@drawable/icon_search" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin3"
        android:layout_marginEnd="@dimen/margin15"
        android:text="@string/media_library"
        app:icon="@drawable/icon_media_library" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin17"
        android:layout_marginTop="@dimen/margin3"
        android:layout_marginEnd="@dimen/margin15"
        android:text="@string/settings"
        app:icon="@drawable/icon_cog" />
</LinearLayout>