<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/HeadsImageConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/head_margin_top_image"
            android:layout_marginTop="@dimen/head_margin_top_image"
            android:background="@color/search_background"
            android:contentDescription="@string/description_button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/HeadsTextConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/search_background"
            android:text="@string/media_library" />
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/tab_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorFullWidth="true"
        app:tabInlineLabel="true"
        app:tabTextAppearance="@style/TextTabLayout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_favorite_track" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_playlists" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerLibrary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>