<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    tools:context=".search.ui.activity.SearchFragment">

    <LinearLayout
        style="@style/HeadsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background"
        android:paddingHorizontal="@dimen/padding16">

        <TextView
            style="@style/HeadsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/search_background"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        app:cardBackgroundColor="@color/search_background_searchline"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/SearchBarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:backgroundTint="@color/search_background_searchline"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/search_text_searchline"
                android:textColorHint="@color/search_hint_text_searchline"
                android:textCursorDrawable="@drawable/color_cursor" />

            <ImageView
                android:id="@+id/clearTextSearch"
                style="@style/ClearSearchField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/progressBarScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:progress="75"
            android:visibility="visible"
            app:indicatorColor="@color/progressbar"
            app:indicatorSize="44dp"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/searchPlaceHolderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/searchPlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textColor="@color/error_placeholder"
            android:textSize="19sp"
            tools:text="@string/check_network" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/placeholderRefreshButton"
            style="@style/PlaceholderButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:height="36dp"
            android:backgroundTint="@color/error_placeholder"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh_button_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="54dp"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/searchHistoryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="top|center"
            android:text="@string/you_searched"
            android:textColor="@color/error_placeholder"
            android:textSize="19sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTrackList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyClear"
            style="@style/PlaceholderButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/error_placeholder"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/clear_history_button_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="gone"
            app:cornerRadius="54dp"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>