<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding16">

    <LinearLayout
        style="@style/HeadsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background">

        <ImageView
            android:id="@+id/btn_back"
            style="@style/HeadsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/search_background" />

        <TextView
            style="@style/HeadsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/search_background"
            android:text="@string/search" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        app:cardBackgroundColor="@color/search_background_searchline"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <ImageView
                style="@style/SearchBarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="13dp" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:backgroundTint="@color/search_background_searchline"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/search_text_searchline"
                android:textColorHint="@color/search_hint_text_searchline" />

            <ImageView
                android:id="@+id/clearTextSearch"
                style="@style/ClearSearchField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/placeHolderNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="113dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            style="@style/search_placeholder_network_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/check_network_lvl1"
            android:textAlignment="center"
            android:textColor="@color/error_placeholder"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/check_network_lvl2"
            android:textAlignment="center"
            android:textColor="@color/error_placeholder"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/placeHolderNoInternetRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:height="36dp"
            android:backgroundTint="@color/error_placeholder"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/refresh_button_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="54dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeHolderNothingFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="113dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            style="@style/search_placeholder_no_result_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/nothing_found"
            android:textAlignment="center"
            android:textColor="@color/error_placeholder"
            android:textSize="19sp" />

    </LinearLayout>


</LinearLayout>